--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
-# Object file
-*.o
-
-# Ada Library Information
-*.ali
+/node_modules
+/.pnp
+.pnp.js
+/coverage
+/build
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
